# doc-extract-parse-index

./: .env.example  .gitignore  CONTRIBUTING.md  README.md  SECURITY.md
backend/: Dockerfile  app.py  database.py  llamaextract.py  pyproject.toml  requirements.txt  schema.py  utils.py
backend/templates/: index.html
frontend/: Dockerfile  package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.css  App.js
frontend/src/components/: DocumentDetailsModal.js  DocumentListSection.js  Notification.js  SearchSection.js  UploadSection.js
